--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,106 @@
 ---
 layout: base.html
-title: Home
+title: Portfolio - Walter Moore
 ---
-<div class="max-w-lg mx-auto mt-6 px-4 text-center">
-  <h1 class="font-semibold text-3xl">It’s (j)ust (e)leventy and (t)ailwind</h1>
-  <p>…OK, and a few other things; it's still *really* small though.</p>
-</div>
-<p class="flex items-center justify-center max-w-md mt-6 mx-auto px-4">
-  <a href="https://11ty.dev/" class="bg-gray-900 inline-block mr-6"><img src="img/11ty.svg" alt="Eleventy" class="h-24" /></a>
-  and
-  <a href="https://tailwindcss.com/" class="ml-6"><img src="img/tailwindcss.svg" alt="Tailwind CSS" class="w-64" /></a>
-</p>
-<p class="flex justify-center max-w-md mt-16 mx-auto">
-  <a href="https://github.com/marcamos/jet#readme" class="mr-6 underline">View on GitHub</a>
-  <a href="https://marcamos-jet.netlify.app/" class="underline">View on Netlify</a>
-</p>
+<!-- Hero Section -->
+<section id="hero" class="bg-gradient-to-r from-blue-500 to-teal-400 text-white py-16">
+  <div class="container mx-auto px-6 text-center">
+    <h2 class="text-4xl font-extrabold">Bridging Technology and Business</h2>
+    <p class="mt-4 text-lg">Entrepreneurial Engineer & Business Strategist. Leadership in SaaS, Innovation, & Client Solutions</p>
+    <a href="#contact" class="mt-6 inline-block bg-white text-blue-500 px-6 py-3 rounded shadow hover:bg-gray-100">Let's Connect</a>
+  </div>
+</section>
+
+<!-- About Section -->
+<section id="about" class="py-16">
+  <div class="container mx-auto px-6">
+    <h3 class="text-3xl font-bold text-center">About Me</h3>
+    <div class="mt-10 grid gap-8 md:grid-cols-2 lg:grid-cols-3"></div>
+    <div class="flex justify-center">
+      <img src="img/pfp.jpg" alt="Your Bio Picture" class="w-48 h-48 rounded-full shadow-lg">
+    </div>
+    <div>
+      <p class="mt-4 text-lg text-gray-700">
+        I am a seasoned software engineer with over 15 years of experience, now transitioning into technical sales and consulting. My focus is on driving impact by bridging complex technologies and business needs.
+      </p>
+    </div>
+    </div>
+  </div>
+</section>
+
+<!-- Timeline Section -->
+<section id="timeline" class="py-16 bg-gray-50">
+  <div class="container mx-auto px-6">
+    <h3 class="text-3xl font-bold text-center">My Journey</h3>
+    <div class="mt-10 relative border-l-2 border-blue-500">
+      <!-- Timeline Item 1 -->
+      <div class="mb-8 ml-6">
+        <div class="absolute w-4 h-4 bg-blue-500 rounded-full -left-2.5 border border-white"></div>
+        <h4 class="text-xl font-semibold">Position Title</h4>
+        <p class="text-gray-600">Company Name</p>
+        <p class="mt-2 text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <span class="text-sm text-gray-500">Year - Year</span>
+      </div>
+      <!-- Timeline Item 2 -->
+      <div class="mb-8 ml-6">
+        <div class="absolute w-4 h-4 bg-blue-500 rounded-full -left-2.5 border border-white"></div>
+        <h4 class="text-xl font-semibold">Position Title</h4>
+        <p class="text-gray-600">Company Name</p>
+        <p class="mt-2 text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <span class="text-sm text-gray-500">Year - Year</span>
+      </div>
+      <!-- Add more timeline items as needed -->
+    </div>
+  </div>
+</section>
+
+<!-- Experience Section -->
+<section id="experience" class="bg-gray-50 py-16">
+  <div class="container mx-auto px-6">
+    <h3 class="text-3xl font-bold text-center">Experience</h3>
+    <div class="mt-10 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
+      <!-- Example Card -->
+      <div class="bg-white p-6 rounded shadow">
+        <h4 class="text-xl font-bold">Senior Software Engineer</h4>
+        <p class="text-gray-600">Company Name</p>
+        <p class="mt-4 text-gray-700">Led development on multiple high-impact projects, collaborating with cross-functional teams to deliver robust solutions.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Projects Section -->
+<section id="projects" class="py-16">
+  <div class="container mx-auto px-6">
+    <h3 class="text-3xl font-bold text-center">Projects</h3>
+    <div class="mt-10 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
+      <!-- Example Card -->
+      <div class="bg-white p-6 rounded shadow">
+        <h4 class="text-xl font-bold">Project Name</h4>
+        <p class="mt-2 text-gray-700">A brief description of the project, its purpose, and the technologies used.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Contact Section -->
+<section id="contact" class="bg-gray-50 py-16">
+  <div class="container mx-auto px-6">
+    <h3 class="text-3xl font-bold text-center">Contact Me</h3>
+    <form class="mt-10 max-w-xl mx-auto bg-white p-6 rounded shadow">
+      <div class="mb-4">
+        <label for="name" class="block text-gray-700 font-bold">Name</label>
+        <input type="text" id="name" class="w-full mt-2 p-3 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+      </div>
+      <div class="mb-4">
+        <label for="email" class="block text-gray-700 font-bold">Email</label>
+        <input type="email" id="email" class="w-full mt-2 p-3 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+      </div>
+      <div class="mb-4">
+        <label for="message" class="block text-gray-700 font-bold">Message</label>
+        <textarea id="message" rows="4" class="w-full mt-2 p-3 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
+      </div>
+      <button type="submit" class="w-full bg-blue-500 text-white py-3 rounded hover:bg-blue-600">Send Message</button>
+    </form>
+  </div>
+</section>
