--- a/src/index.html
+++ b/src/index.html
@@ -15,15 +15,15 @@ title: Portfolio - Walter Moore
 <section id="about" class="py-16">
   <div class="container mx-auto px-6">
     <h3 class="text-3xl font-bold text-center">About Me</h3>
-    <div class="mt-10 grid gap-8 md:grid-cols-2 lg:grid-cols-3"></div>
-    <div class="flex justify-center">
-      <img src="img/pfp.jpg" alt="Your Bio Picture" class="w-48 h-48 rounded-full shadow-lg">
-    </div>
-    <div>
-      <p class="mt-4 text-lg text-gray-700">
-        I am a seasoned software engineer with over 15 years of experience, now transitioning into technical sales and consulting. My focus is on driving impact by bridging complex technologies and business needs.
-      </p>
-    </div>
+    <div class="mt-10 grid gap-8 grid-cols-1 lg:grid-cols-3">
+      <div class="col-span-1">
+        <img src="img/pfp.jpg" alt="Your Bio Picture" class="w-48 h-48 rounded-full shadow-lg">
+      </div>
+      <div class="col-span-2">
+        <p class="mt-4 text-lg text-gray-700">
+          {{about.introduction}}
+        </p>
+      </div>
     </div>
   </div>
 </section>
@@ -33,52 +33,42 @@ title: Portfolio - Walter Moore
   <div class="container mx-auto px-6">
     <h3 class="text-3xl font-bold text-center">My Journey</h3>
     <div class="mt-10 relative border-l-2 border-blue-500">
+      {% for event in timeline %}
       <!-- Timeline Item 1 -->
       <div class="mb-8 ml-6">
         <div class="absolute w-4 h-4 bg-blue-500 rounded-full -left-2.5 border border-white"></div>
-        <h4 class="text-xl font-semibold">Position Title</h4>
-        <p class="text-gray-600">Company Name</p>
-        <p class="mt-2 text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <span class="text-sm text-gray-500">Year - Year</span>
+        <h4 class="text-xl font-semibold">{{event.title}}</h4>
+        <p class="text-gray-600">{{event.subtitle}}</p>
+        <p class="mt-2 text-gray-700">{{event.description}}</p>
+        <span class="text-sm text-gray-500">{{event.date}}</span>
       </div>
-      <!-- Timeline Item 2 -->
-      <div class="mb-8 ml-6">
-        <div class="absolute w-4 h-4 bg-blue-500 rounded-full -left-2.5 border border-white"></div>
-        <h4 class="text-xl font-semibold">Position Title</h4>
-        <p class="text-gray-600">Company Name</p>
-        <p class="mt-2 text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <span class="text-sm text-gray-500">Year - Year</span>
-      </div>
-      <!-- Add more timeline items as needed -->
+      {% endfor %}
     </div>
   </div>
 </section>
 
-<!-- Experience Section -->
-<section id="experience" class="bg-gray-50 py-16">
-  <div class="container mx-auto px-6">
-    <h3 class="text-3xl font-bold text-center">Experience</h3>
-    <div class="mt-10 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
-      <!-- Example Card -->
-      <div class="bg-white p-6 rounded shadow">
-        <h4 class="text-xl font-bold">Senior Software Engineer</h4>
-        <p class="text-gray-600">Company Name</p>
-        <p class="mt-4 text-gray-700">Led development on multiple high-impact projects, collaborating with cross-functional teams to deliver robust solutions.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Projects Section -->
+<!-- Portfolio Section -->
 <section id="projects" class="py-16">
   <div class="container mx-auto px-6">
-    <h3 class="text-3xl font-bold text-center">Projects</h3>
+    <h3 class="text-3xl font-bold text-center">Portfolio</h3>
     <div class="mt-10 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
+      {% for project in portfolio %}
       <!-- Example Card -->
-      <div class="bg-white p-6 rounded shadow">
-        <h4 class="text-xl font-bold">Project Name</h4>
-        <p class="mt-2 text-gray-700">A brief description of the project, its purpose, and the technologies used.</p>
+      <div class="bg-white p-6 flex flex-col rounded-xl border border-2">
+        <div class="grow flex flex-col justify-between">
+          <div clas="flex flex-col">
+            <img src="img/{{project.image}}" alt="Project Image" class="w-full h-32 object-contain rounded-t">
+            <h4 class="text-xl font-bold mt-4">{{project.title}}</h4>
+            <p class="mt-2 text-gray-700">{{project.description}}</p>
+          </div>
+          <div class="mt-4 flex flex-wrap gap-2 justify-end items-end">
+            {% for skill in project.skills%}
+            <span class="px-3 py-1 text-sm bg-blue-100 text-blue-700 rounded-full">{{skill}}</span>
+            {% endfor %}
+          </div>
+        </div>
       </div>
+      {% endfor %}
     </div>
   </div>
 </section>
